# crud-people-rust-api

./: Cargo.toml  README.md
src/: main.rs
