[package]
name = "crud-people-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
time = { version = "0.3.36", features = ["macros", "serde", "formatting", "parsing"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = {version = "1.8.0", features = ["v7", "serde"] }
